<?xml version="1.0"?>
<package format="3">
  <name>ros_etsi_its_msgs</name>
  <version>0.2.0</version>
  <description>ROS equivalents of ETSI ITS messages, e.g. CAM and DENM</description>

  <maintainer email="silascorreia.lobo@carissma.eu">Silas Lobo</maintainer>
  <license>BSD 3-clause</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Member of group for interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export the build type -->
  <export>
    <build_type>ament_cmake</build_type>
    <build_depend>rosidl_default_runtime</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
  </export>
</package>

